Aligns picture and text propertly. Corrects line spacing.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 body {
   background-image: url("http://img0.gtsstatic.com/wallpapers/cc5ea2f85865741869d481ad21fec357_large.jpeg");
   background-position: top;
@@ -13,9 +8,20 @@ body {
   text-align: center;
 }
 
+#header {
+  height: auto;
+  width: 500px;
+  background-color: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5px;
+}
+
 img {
   padding-bottom: 5px;
-  padding-top: 5px ;
+  padding-top: 70px ;
+  padding-right: 300px;
+  float: right;
 }
 
 h1 {
@@ -24,21 +30,38 @@ h1 {
   text-shadow: 2px 2px #009966;
 }
 
-button {
-  margin-top: 5px;
+section {
+  text-align: left;
+  padding-left: 300px;
+
 }
 
-#rollButton {
-  margin-top: 2px;
+button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+#roll {
+  text-align: left;
 }
 
 #players {
   border: 2px;
+  color: #003333;
+  font-size: 20px;
   font-weight: bold;
-  padding-bottom: 2px;
+  padding-top: 50px;
+  line-height: 200%;
+
+}
+
+#gameplay {
+  line-height: 150%;
+  color: #003333;
+
 }
 
 #eventEffect {
-  color: #006633;
-
+  font-weight: bold;
 }
